fix overflow

--- a/src/widgets/private-dialogue/PrivateDialogueWindow/ui/PrivateDialogueWindow.module.scss
+++ b/src/widgets/private-dialogue/PrivateDialogueWindow/ui/PrivateDialogueWindow.module.scss
@@ -21,6 +21,7 @@ $right-side-width : 400px;
     .rightSide {
         width         : 0;
         overflow      : hidden;
+        overflow-y    : auto;
         transition    : var(--transition-medium);
         background    : var(--bg-ghost-color);
         border-radius : var(--offset-medium);
